# beet_engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: format.yml  windows_build.yml
core/inc/beet/: assert.h  asset.h  asset_manager.h  camera.h  component.h  components.h  editor_camera.h  engine.h  framebuffer.h  framebuffer_manager.h  game_object.h  input_manager.h  instance_mesh.h  lights.h  log.h  material.h  mesh.h  post_processing.h  renderer.h  scene.h  shader_program.h  shader_storage_buffer.h  skybox.h  subsystem.h  texture.h  transform.h  types.h  universal_buffer_data.h  window.h
core/src/: asset.cpp  asset_manager.cpp  camera.cpp  editor_camera.cpp  engine.cpp  framebuffer.cpp  framebuffer_manager.cpp  game_object.cpp  input_manager.cpp  instance_mesh.cpp  log.cpp  material.cpp  mesh.cpp  post_processing.cpp  renderer.cpp  scene.cpp  shader_program.cpp  shader_storage_buffer.cpp  skybox.cpp  texture.cpp  transform.cpp  universal_buffer_data.cpp  window.cpp
editor/src/: editor.cpp  editor.h  editor_widgets.cpp  editor_widgets.h  main.cpp
editor/src/widgets/: demo_widget.cpp  demo_widget.h  editor_widgets.cpp  editor_widgets.h  framebuffer_widget.cpp  framebuffer_widget.h  gizmo_widget.cpp  gizmo_widget.h  hierarchy_widget.cpp  hierarchy_widget.h  inspector_widget.cpp  inspector_widget.h  profiler_widget.cpp  profiler_widget.h  terminal_widget.cpp  terminal_widget.h  widget.h
res/misc/: 128_layers.fbx  16_layers.fbx  256_layers.fbx  2_layers.fbx  30x1_60_tris.fbx  30x30x30_54k_tris.fbx  32_layers.fbx  4_layers.fbx  64_layers.fbx  8_layers.fbx  default_cube.fbx  plane.fbx  sphere.fbx
res/shaders/depth/: depth.frag  depth.vert
res/shaders/fallback/: fallback.frag  fallback.vert
res/shaders/lit/: lit.frag  lit.vert
res/shaders/oit/: composite_ppll.vert  oit.frag  oit.vert  oit_composite.frag  oit_composite.vert  ppll.frag
res/shaders/oit_ppll/: composite_ppll.frag  gather_ppll.frag
res/shaders/oit_wb/: lit_gather_wb.vert
res/shaders/picking/: picking.frag
res/shaders/post_process/: post_process.frag  post_process.vert
res/shaders/skybox/: skybox.frag  skybox.vert
res/shaders/transparency/: composite.frag  composite.vert  transparent.frag  transparent.vert
res/shaders/unused/oit_ppll/: lit_gather_ppll.frag
third/: CMakeLists.txt
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
